--- a/style.css
+++ b/style.css
@@ -213,6 +213,10 @@ body {
   color: var(--child-S);
 }
 
+.mt-20 {
+  margin-top: 20px;
+}
+
 .flex-direction-row-reverse {
   flex-direction: row-reverse;
 }
@@ -251,6 +255,22 @@ body {
 
 .flex-justify-content-space-evenly {
   justify-content: space-evenly;
+}
+
+.flex-align-items-start {
+  align-items: flex-start;
+}
+
+.flex-align-items-end {
+  align-items: flex-end;
+}
+
+.flex-align-items-center {
+  align-items: center;
+}
+
+.flex-align-items-baseline {
+  align-items: baseline;
 }
 
 .direction-rtl {
